2014-09-19  Daniel Bates  <dabates@apple.com>

        Always assume internal SDK when building configuration Production
        https://bugs.webkit.org/show_bug.cgi?id=136925
        <rdar://problem/18362399>

        Reviewed by Dan Bernstein.

        * Configurations/DebugRelease.xcconfig: Also move #include of HaveInternalSDK.xcconfig from DebugRelease.xcconfig
        to Base.xcconfig so as to be consistent with the format of other Base.xcconfig/DebugRelease.xcconfig files
        (e.g. Source/WebCore/Configurations/Base.xcconfig and Source/WebCore/Configurations/DebugRelease.xcconfig).

2014-09-19  Carlos Garcia Campos  <cgarcia@igalia.com>

        Webkitgtk 2.5.3: tarball contains APPLE LICENSE file - stating not distributable
        https://bugs.webkit.org/show_bug.cgi?id=136632

        Reviewed by Gustavo Noronha Silva.

        Add free icons for the GTK port. These icons are from the GNOME
        project, some of them adapted by Andres Gomez for the inspector.
        This is only a subset of the icons, since we still don't have a
        free replacement for all of them, but at least it makes the
        inspector kind of usable.

        * UserInterface/Images/gtk/AUTHORS: Added.
        * UserInterface/Images/gtk/BackArrow.svg: Added.
        * UserInterface/Images/gtk/BreakpointActionAdd.svg: Added.
        * UserInterface/Images/gtk/BreakpointActionRemove.svg: Added.
        * UserInterface/Images/gtk/BreakpointButton.svg: Added.
        * UserInterface/Images/gtk/BreakpointInactiveButton.svg: Added.
        * UserInterface/Images/gtk/Breakpoints.svg: Added.
        * UserInterface/Images/gtk/COPYING: Added.
        * UserInterface/Images/gtk/Close.svg: Added.
        * UserInterface/Images/gtk/CloseWhite.svg: Added.
        * UserInterface/Images/gtk/ContentFlow.svg: Added.
        * UserInterface/Images/gtk/Crosshair.svg: Added.
        * UserInterface/Images/gtk/DOMCharacterData.svg: Added.